--- a/.github/workflows/hml-deploy.yml
+++ b/.github/workflows/hml-deploy.yml
@@ -12,4 +12,4 @@ jobs:
     
     steps:
     - name: Imprimir SHA
-      run: echo "$SHA_TEST && echo HOMOL"
+      run: echo "$SHA_TEST && echo HOMOL HOMOL"
